@@ -6,6 +6,7 @@ v1.0.4
                     - Fixed handling of GENERATED STORED column changes.
                     - Added support for TABLE POLICIES.
                     - Added support for UNIQUE INDEXes.
+                    - Fixed order of object for creation.
 
 2025-12-22      v1.0.3
 
